pdailydir=		${sysconfdir}/periodic/daily
psecuritydir=		${sysconfdir}/periodic/security
pweeklydir=		${sysconfdir}/periodic/weekly
bashcompdir=		${sysconfdir}/bash_completion.d
zshcompdir=		${prefix}/share/zsh/site-functions

dist_sbin_SCRIPTS=	sbin/pkg2ng
dist_pdaily_SCRIPTS=	periodic/411.pkg-backup \
			periodic/490.status-pkg-changes
dist_psecurity_SCRIPTS=	periodic/410.pkg-audit \
			periodic/460.pkg-checksum
dist_pweekly_SCRIPTS=	periodic/400.status-pkg
dist_bashcomp_DATA=	completion/_pkg.bash
dist_zshcomp_DATA=	completion/_pkg
